--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -38,6 +38,8 @@
       'css/font.css'
       'css/main_style.css'
 
+      'redactor/redactor.css'
+
       filter='cssrewrite' %}
       <link rel="stylesheet" href="{{ asset_url }}" type="text/css" media="screen"/>
     {% endstylesheets %}
@@ -109,6 +111,11 @@
           'js/jssor.slider.js'
 
           'js/jquery-cookie/jquery.cookie.js'
+
+          'redactor/redactor.js'
+          'redactor/fullscreen.js'
+          'redactor/fr.js'
+          'bundles/stpredactor/js/script.js'
           
           %}
           <script src="{{ asset_url }}"></script>
