--- a/src/LBF/AdminBundle/Resources/views/Admin/newElement.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/newElement.html.twig
@@ -3,7 +3,7 @@
 {% extends "LBFAdminBundle::admin_general.html.twig" %}
 
 {% block title %}
-  {{ parent() }} - Produits
+  {{ parent() }} - Nouveau produit
 {% endblock %}
 
 {% block LBF_Admin_body %}
