--- a/src/LBF/AdminBundle/Resources/views/Admin/newsletterEmails.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/newsletterEmails.html.twig
@@ -3,7 +3,7 @@
 {% extends "LBFAdminBundle::admin_general.html.twig" %}
 
 {% block title %}
-  {{ parent() }} - Administration
+  {{ parent() }} - Newsletter emails
 {% endblock %}
 
 {% block LBF_Admin_body %}
@@ -28,7 +28,7 @@
 
 		        			<div class="row90">
 		        				<div class="row left">
-					    			<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders') }}')" class="btn btn-admin">
+					    			<a href="javascript:loadContentAdmin('{{ path('lbf_admin_newsletter') }}')" class="btn btn-admin">
 					    				Retour
 					    			</a>
 					    		</div>
