--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -90,26 +90,45 @@
 			</h4>
 			{{ 'footer.content.receiveOurNewsletter' | trans }}
 			<br/>
-			<form method="post" action="{{ path('lbf_main_newsletterEmail', {'path': app.request.attributes.get( '_route' )}) }}">
-				<div class="row">
-				    <div class="input-group">
-				      <input id="newsletterEmail" name="newsletterEmail" type="text" class="form-control" placeholder="{{ 'footer.actions.enterEmail' | trans }}"/>
-				      <span class="input-group-btn">
-				        <button type="submit" class="btn btn-default" type="button">
-				        	{{ 'footer.actions.send' | trans }}
-				        </button>
-				      </span>
-				    </div>
-				</div>
-			</form>
+
+			<div class="row" id="newsletterForm">
+				<form method="post" action="{{ path('lbf_main_newsletterEmail', {'path': app.request.attributes.get( '_route' )}) }}" >
+					<div class="row">
+
+		                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			              <input type="radio" name="newsletterType" value="user" id="user_type" onClick="showNewsletterSelect()"/>
+			              <label for="user_type">
+			                {{ 'footer.newsletter.user'|trans }}
+			              </label>
+			            </div>
+			            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			              <input type="radio" name="newsletterType" value="company" id="company_type" onClick="showNewsletterSelect()"/>
+			              <label for="company_type">
+			                {{ 'footer.newsletter.company'|trans }}
+			              </label>
+			            </div>		
+
+					    <div class="row" style="display:none;" id="newsletter_email_input">
+						    <div class="input-group">
+						      <input id="newsletterEmail" name="newsletterEmail" type="text" class="form-control" placeholder="{{ 'footer.actions.enterEmail' | trans }}"/>
+						      <span class="input-group-btn">
+						        <button type="submit" class="btn btn-default" type="button" id="submitNewsletterButton">
+						        	{{ 'footer.actions.send' | trans }}
+						        </button>
+						      </span>
+						    </div>
+					    </div>
+					</div>
+				</form>
+			</div>
 		</div>
 		<div class="hidden-lg hidden-md hidden-sm col-xs-12 sep_presentation_footer"></div>
 		<div class="col-lg-4 col-md-4 col-sm-4 col-sm-12">
-	 		<a href="#">
+	 		<a data-toggle="modal" data-target="#testimoniesModal">
 		 	<h4>
-		 		{{ 'footer.titles.witnesses' | trans }}
+		 		{{ 'footer.titles.testimonies' | trans }}
 		 	</h4>
-		 	{{ 'footer.content.witnesses' | trans }}
+		 	{{ 'footer.content.testimonies' | trans }}
 		 	<div class="center">
 			 	<img alt="Comment" src="{{ asset('img/system/icons/comment.png') }}" class="icon_presentation_footer"/>
 		 	</div>
@@ -122,7 +141,7 @@
 		 	</h4>
 		 	{{ 'footer.content.clientService' | trans }}
 		 	<br/>
-		 	<a href="">
+		 	<a href="tel:+51984060620">
 		 		+51 984 06 06 20
 		 	</a>
 		 	<!-- <div class="center">
@@ -139,75 +158,71 @@
 				</h4>
 				<ul class="list_no_style_li">
 					<li>
-						<a href="">
-							{{ 'footer.content.contact' | trans }}
+						<a href="#aboutUs">
+							{{ 'footer.content.whoWeAre' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="">
-							{{ 'footer.content.thanks' | trans }}
+						<a data-toggle="modal" data-target="#shopsModal">
+							{{ 'footer.content.shops' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a data-toggle="modal" data-target="#CGVModal">
+							{{ 'footer.content.sellingConditions' | trans }}
+						</a>
+					</li>
+					<li>
+						<a data-toggle="modal" data-target="#legalMentionsModal">
 							{{ 'footer.content.legalMentions' | trans }}
 						</a>
 					</li>
 				</ul>
-			</div>
-			<div class="hidden-lg hidden-md hidden-sm col-xs-12 sep_presentation_footer"></div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"> 
+
+				<br/>
+				
+				<div class="hidden-lg hidden-md hidden-sm col-xs-12 sep_presentation_footer"></div>
+
+				<br/>
+				
 				<h4>
 				 	{{ 'footer.titles.needHelp' | trans }}
 				</h4>
 				<ul class="list_no_style_li">
 					<li>
-						<a href="">
-							{{ 'footer.content.moreInfo' | trans }}
-						</a>
-					</li>
-					<li>
-						<a href="">
+						<a data-toggle="modal" data-target="#deliveryModal">
 							{{ 'footer.content.delivery' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="#ourProducts">
+							{{ 'footer.content.ourProducts' | trans }}
+						</a>
+					</li>
+					<li>
+						<a data-toggle="modal" data-target="#ourWorkModal">
 							{{ 'footer.content.ourWork' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a data-toggle="modal" data-target="#FAQModal">
 							{{ 'footer.content.questions' | trans }}
 						</a>
 					</li> 	
 				</ul>
 			</div>
 			<div class="hidden-lg hidden-md hidden-sm col-xs-12 sep_presentation_footer"></div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-			  	<h4>
-			  		{{ 'footer.titles.meatPanel' | trans }}
-			  	</h4>
-			  	<ul class="list_no_style_li">
-					<li>
-						<a href="">Saucissons</a>
-					</li>
-					<li>
-						<a href="">Patés</a>
-					</li>
-					<li>
-						<a href="">Chorizo</a>
-					</li>
-					<li>
-						<a href="">Merguez</a>
-					</li>
-					<li>
-						<a href="">Chippolata</a>
-					</li>
-				</ul>
-			</div>
+		  	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+	        	<!-- 16:9 aspect ratio -->
+				<div class="embed-responsive embed-responsive-16by9">
+				  <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3879.0289476897924!2d-71.90520600000005!3d-13.533814999999993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDMyJzAxLjciUyA3McKwNTQnMTguNyJX!5e0!3m2!1sfr!2sfr!4v1425744003816"></iframe>
+				</div>
+	        </div>
 		</div>
 		<div class="hidden-lg hidden-md hidden-sm col-xs-12 sep_presentation_footer"></div>
+
+		<br/>
+
 		<div class="row center">
 			Le Buffet Francés - {{ 'footer.bottom.allRightsReserved' | trans }} © 2015
 		</div>
