--- a/src/LBF/AdminBundle/Resources/views/Admin/newRecipe.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/newRecipe.html.twig
@@ -3,7 +3,7 @@
 {% extends "LBFAdminBundle::admin_general.html.twig" %}
 
 {% block title %}
-  {{ parent() }} - Produits
+  {{ parent() }} - Nouvelle recette
 {% endblock %}
 
 {% block LBF_Admin_body %}
@@ -193,8 +193,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_descriptionEs = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Descripción (5 lineas)', 'id':'descriptionEs', 
+												        	{% set opt_descriptionEs = {'attr': {'class': 'redactor',
+												        		'placeholder':'Descripción (5 lineas)', 'id':'descriptionEs', 
 												        		'name':'_descriptionEs'}} %}
 												        	{{ form_widget(formRecipe.descriptionEs, opt_descriptionEs) }}
 												        </div>
@@ -213,8 +213,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_ingredientsEs = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Ingredientes de la receta', 'id':'ingredientsEs', 
+												        	{% set opt_ingredientsEs = {'attr': {'class': 'redactor',
+												        		'placeholder':'Ingredientes de la receta', 'id':'ingredientsEs', 
 												        		'name':'_ingredientsEs'}} %}
 												        	{{ form_widget(formRecipe.ingredientsEs, opt_ingredientsEs) }}
 												        </div>
@@ -233,8 +233,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_preparationEs = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Preparación de la receta', 'id':'preparationEs', 
+												        	{% set opt_preparationEs = {'attr': {'class': 'redactor',
+												        		'placeholder':'Preparación de la receta', 'id':'preparationEs', 
 												        		'name':'_preparationEs'}} %}
 												        	{{ form_widget(formRecipe.preparationEs, opt_preparationEs) }}
 												        </div>
@@ -256,8 +256,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_descriptionFr = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Courte description (5 lineas)', 'id':'descriptionFr', 
+												        	{% set opt_descriptionFr = {'attr': {'class': 'redactor',
+												        		'placeholder':'Courte description (5 lineas)', 'id':'descriptionFr', 
 												        		'name':'_descriptionFr'}} %}
 												        	{{ form_widget(formRecipe.descriptionFr, opt_descriptionFr) }}
 												        </div>
@@ -276,8 +276,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_ingredientsFr = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Ingredients de la recette', 'id':'ingredientsFr', 
+												        	{% set opt_ingredientsFr = {'attr': {'class': 'redactor',
+												        		'placeholder':'Ingredients de la recette', 'id':'ingredientsFr', 
 												        		'name':'_ingredientsFr'}} %}
 												        	{{ form_widget(formRecipe.ingredientsFr, opt_ingredientsFr) }}
 												        </div>
@@ -296,8 +296,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_preparationFr = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Preparation de la recette', 'id':'preparationFr', 
+												        	{% set opt_preparationFr = {'attr': {'class': 'redactor',
+												        		'placeholder':'Preparation de la recette', 'id':'preparationFr', 
 												        		'name':'_preparationFr'}} %}
 												        	{{ form_widget(formRecipe.preparationFr, opt_preparationFr) }}
 												        </div>
@@ -319,8 +319,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_descriptionEn = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Short description (5 lines)', 'id':'descriptionEn', 
+												        	{% set opt_descriptionEn = {'attr': {'class': 'redactor',
+												        		'placeholder':'Short description (5 lines)', 'id':'descriptionEn', 
 												        		'name':'_descriptionEn'}} %}
 												        	{{ form_widget(formRecipe.descriptionEn, opt_descriptionEn) }}
 												        </div>
@@ -339,8 +339,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_ingredientsEn = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Ingredients of the recipe', 'id':'ingredientsEn', 
+												        	{% set opt_ingredientsEn = {'attr': {'class': 'redactor',
+												        		'placeholder':'Ingredients of the recipe', 'id':'ingredientsEn', 
 												        		'name':'_ingredientsEn'}} %}
 												        	{{ form_widget(formRecipe.ingredientsEn, opt_ingredientsEn) }}
 												        </div>
@@ -359,8 +359,8 @@
 										                    <br/>
 										                {% endif %}
 														<div class="input-icon">
-												        	{% set opt_preparationEn = {'attr': {'class': 'form-control placeholder-no-fix',
-												        		'type':'text', 'placeholder':'Recipe preparation', 'id':'preparationEn', 
+												        	{% set opt_preparationEn = {'attr': {'class': 'redactor',
+												        		'placeholder':'Recipe preparation', 'id':'preparationEn', 
 												        		'name':'_preparationEn'}} %}
 												        	{{ form_widget(formRecipe.preparationEn, opt_preparationEn) }}
 												        </div>
