evaluation et footer

--- a/src/LBF/AdminBundle/Resources/views/Admin/emailCompleteClient.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/emailCompleteClient.html.twig
@@ -80,6 +80,21 @@
                                 <br/>
                                 <br/>
                                 <strong><a href="www.lebuffetfrances.com" target="_blank" style="color: #4d5259; text-decoration:none;">Le Buffet Francés</a></strong>
+                                <br/>
+                                <br/>
+                                <br/>
+                                {{ 'emailComplete.content.ifYouHaveTime' | trans }} 
+                                <br/>
+                                <a href="http://www.lebuffetfrances.com/es/testimony/new" style="
+                                  padding: 6px 10px;
+                                  font-size:12px;
+                                  text-decoration:none;
+                                  background-color: rgba(120,30,20,0.99);
+                                  border-radius: 0;
+                                  color: white;">
+                                  {{ 'emailComplete.content.leaveComment' | trans }} 
+                                </a>
+
                             </div>
                           </td>
                         </tr>
