--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -89,6 +89,7 @@
 				{{ 'footer.titles.receiveOurNewsletter' | trans }}
 			</h4>
 			{{ 'footer.content.receiveOurNewsletter' | trans }}
+
 			<br/>
 
 			<div class="row" id="newsletterForm">
@@ -133,6 +134,67 @@
 			 	<img alt="Comment" src="{{ asset('img/system/icons/comment.png') }}" class="icon_presentation_footer"/>
 		 	</div>
 		 	</a>
+
+		 	<!-- Modal 10. Témoignages -->
+			<div class="modal bs-example-modal-lg fade" id="testimoniesModal" tabindex="-1" role="dialog" aria-labelledby="testimoniesModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
+			  <div class="modal-dialog modal-lg">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close white" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			        <h2 class="modal-title center" id="testimoniesModalLabel">
+			          {{ 'modal.testimoniesModal.title' | trans }}
+			        </h2>
+			      </div>
+			      <div class="modal-body">
+			        {% for testimony in testimonies %}
+			          <div class="row">
+			            <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 left">
+			              {{ testimony.content }}
+			            </div>
+			            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 right">
+			              {% set numberStars = testimony.rate %}
+			              {% set numberEmptyStars = 5 - numberStars %}
+			              {% for star in 1..numberStars %}
+			                <div class="glyphicon glyphicon-star"></div>
+			              {% endfor %}
+			              {% if numberEmptyStars > 0 %}
+			                {% for starEmpty in 1..numberEmptyStars %}
+			                  <div class="glyphicon glyphicon-star-empty"></div>
+			                {% endfor %}
+			              {% endif %}
+			            </div>
+			          </div>
+			          <div class="row">
+			            <div class="col-lg-2 col-md-1 col-md-1 hidden-xs"></div>
+			            <div class="col-lg-8 col-md-9 col-md-10 col-xs-12">
+			              <h5 class="right">
+			                — {{ testimony.author }}
+			              </h5>
+			            </div>
+			            <div class="col-lg-2 col-md-2 col-md-1 hidden-xs"></div>
+			          </div>
+
+			          <br/>
+			          <hr/>
+			          <br/>
+			        {% endfor %}
+			      </div>
+			      <div class="modal-footer">
+			      	<div class="float-left">
+				        <a href="{{ path('lbf_main_testimony_new') }}" class="btn btn-modal no_style_a">
+				          {{ 'modal.actions.newTestimony' | trans }}
+				        </a>
+			      	</div>
+			      	<div class="right">
+				        <button type="button" class="btn btn-modal" data-dismiss="modal">
+				          {{ 'modal.actions.close' | trans }}
+				        </button>
+			      	</div>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+
 		</div>
 		<div class="hidden-lg hidden-md hidden-sm col-xs-12 sep_presentation_footer"></div>
 		<div class="col-lg-4 col-md-4 col-sm-4 col-sm-12">
