--- a/src/LBF/AdminBundle/Resources/views/Admin/emailCompleteAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/emailCompleteAdmin.html.twig
@@ -18,7 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Open+Sans+Condensed:300,700,300italic' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>
-      Le Buffet Francés - Commande client confirmée
+      Le Buffet Francés - Commande client terminée
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
