--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -1956,6 +1956,34 @@ body.modal-open {
 	opacity: 0.7;
 }
 
+/* Testimony */
+.rating {
+    float:left;
+    width:300px;
+}
+.rating span { float:right; position:relative; }
+.rating span input {
+    position:absolute;
+    top:0px;
+    left:0px;
+    opacity:0;
+}
+.rating span label {
+    display:inline-block;
+    width:30px;
+    height:30px;
+    text-align:center;
+    margin-right:5px;
+    background-image: url('../img/system/evaluation/star-empty.png');
+    background-size: 100%;
+}
+.rating span:hover ~ span label,
+.rating span:hover label,
+.rating span.checked label,
+.rating span.checked ~ span label {
+    background-image: url('../img/system/evaluation/star-full.png');
+    background-size: 100%;
+}
 
 /* ------------------------------------------------------ User ------------------------------------------------------ */
 .user_img {
