--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -84,6 +84,11 @@
             and route != 'lbf_admin_users'
             and route != 'lbf_admin_newsletter'
             and route != 'lbf_admin_newsletterEmails'
+            and route != 'lbf_admin_comments'
+            and route != 'lbf_admin_comments_sorted'
+            and route != 'lbf_admin_new_comment'
+            and route != 'lbf_admin_edit_comment'
+            and route != 'lbf_admin_delete_comment'
             and route != 'lbf_admin_elements'
             and route != 'lbf_admin_new_element'
             and route != 'lbf_admin_edit_element'
